--- a/django_test_site/static/less/site.less
+++ b/django_test_site/static/less/site.less
@@ -1,12 +1,18 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans|Oswald');
+
 html, body {
 	margin: 0;
 	padding: 0;
 }
 html {
 	font-size: 62.5%;
+	
+	* {
+		box-sizing: border-box;
+	}
 }
 body {
-	font-family: arial, helvetica, sans-serif;
+	font-family: @text-font;
 }
 
 .site-centerer {
