--- a/django_test_site/static/less/variables.less
+++ b/django_test_site/static/less/variables.less
@@ -1,5 +1,8 @@
 @site-max-width: 1440px;
 
+@heading-font: 'Oswald', arial, helvetica, sans-serif;
+@text-font: 'Open Sans', arial, helvetica, sans-serif;
+
 @screen-md: 1280px;
 @screen-sm: 1024px;
 @screen-xs: 768px;
