--- a/django_test_site/static/less/lib/flexbox.less
+++ b/django_test_site/static/less/lib/flexbox.less
@@ -13,6 +13,10 @@
         -ms-flex-pack: justify;
             justify-content: space-between;
 }
+.flex-justify-space-around {
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+}
 .flex-align-items-center {
     -webkit-box-align: center;
         -ms-flex-align: center;
